# mcp-autotask-search

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: claude-code-review.yml  claude.yml
src/autotask_search_mcp/: __init__.py  server.py
